# Istari

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/suPAErnova/: suPAErnova.toml
examples/suPAErnova/data/: IDR_eTmax.txt  mask_info_wmin_wmax.txt  meta.csv
examples/suPAErnova/data/spectra_sncosmo/: CSS110918_01_11_262_062_003.txt  CSS110918_01_11_265_068_003.txt  CSS110918_01_11_267_043_003.txt  CSS110918_01_11_270_054_003.txt  CSS110918_01_11_272_045_003.txt  CSS110918_01_11_275_043_003.txt  CSS110918_01_11_277_053_003.txt  CSS110918_01_11_282_044_003.txt  CSS110918_01_11_285_049_003.txt  CSS110918_01_11_287_039_003.txt  CSS110918_01_11_290_051_003.txt  CSS110918_01_11_292_049_003.txt  CSS110918_01_11_295_043_003.txt  CSS110918_01_11_300_030_003.txt  CSS110918_01_11_304_048_003.txt  CSS110918_01_11_311_052_003.txt  CSS110918_02_11_265_081_003.txt  CSS110918_02_11_267_047_003.txt  CSS110918_02_11_270_062_003.txt  CSS110918_02_11_272_051_003.txt  CSS110918_02_11_275_051_003.txt  CSS110918_02_11_277_057_003.txt  CSS110918_02_11_285_053_003.txt  CSS110918_02_11_287_045_003.txt  CSS110918_02_11_290_055_003.txt  CSS110918_02_11_295_055_003.txt  CSS110918_02_11_300_036_003.txt  CSS110918_02_11_302_062_003.txt  CSS120424_01_12_120_064_003.txt  CSS120424_01_12_130_065_003.txt  CSS120424_01_12_132_051_003.txt  CSS120424_01_12_134_064_003.txt  CSS120424_01_12_136_058_003.txt  CSS120424_01_12_139_051_003.txt  CSS120424_01_12_142_063_003.txt  CSS120424_01_12_149_058_003.txt  CSS120424_01_12_160_076_003.txt  CSS120424_01_12_167_053_003.txt  CSS120424_01_12_175_066_003.txt  CSS120424_01_12_193_060_003.txt  (+3105 more)
examples/suPAErnova/output/DATA/: DATA.toml  data.npz
src/istari/: steps.py
